@@ -4,6 +4,7 @@ import src.dao.TempDB;
 import src.entity.Employee;
 
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 public class Ques11 {
@@ -14,13 +15,28 @@ public class Ques11 {
 
         List<Employee> employees = TempDB.getEmployees();
 
+        //employees.add(new )
+
         List<String> emptyDepts = employees.stream()
-                .collect(Collectors.groupingBy(emp -> emp.getDept()))
+                .collect(Collectors.groupingBy(Employee::getDept))
                 .entrySet()
                 .stream()
-                .filter(x -> x.getValue().size() == 0)
-                .collect(Collectors.mapping(x -> x.getKey(),
-                        Collectors.toList()));
+                .filter(x -> x.getValue().isEmpty())
+                .map(Map.Entry::getKey)
+                .toList();
+
+        //System.out.println(emptyDepts);
+
+        System.out.println("----------------------");
+
+
+        //Ganesh Approach
+        employees.stream()
+                .filter(emp->emp.getName().isEmpty() && !emp.getDept().isEmpty())
+                .map(Employee::getDept)
+                .distinct()
+                .toList()
+                .forEach(System.out::println);
 
 
     }
